--- a/expensewebsite/.env
+++ b/expensewebsite/.env
@@ -2,3 +2,7 @@ export const DB_NAME = 'incomeexpensesdb'
 export const DB_USER = 'postgres'
 export const DB_USER_PASSWORD = 'database@123'
 export const DB_HOST = 'localhost'
+export const EMAIL_HOST_PASSWORD = 'Angry@123'
+export const EMAIL_HOST_USER = 'sureshangry3@gmail.com'
+export const DEFAULT_FROM_EMAIL = 'sureshangry3@gmail.com'
+export const EMAIL_HOST = 'smtp.gmail.com'
